# mytechclinic-chatbot

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  index.html  main.uxf
.github/workflows/: build-macos.yml  build-ubuntu.yml
src/: AuthMiddleware.cpp  AuthMiddleware.hpp  GPTApp.cpp  GPTApp.hpp  WebApp.cpp  WebApp.hpp  index_html.hpp  main.cpp
